--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -9,17 +9,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Memoria utilizada por mi_script.py: 90384.0 bytes\n"
+     ]
+    }
+   ],
    "source": [
-    "file_path = \"farmers-protest-tweets-2021-2-4.json\""
+    "import psutil\n",
+    "import subprocess\n",
+    "import time\n",
+    "\n",
+    "# Ejecutar el script y medir su uso de memoria\n",
+    "process = subprocess.Popen([\"python\", \"/Users/mema/Documents/Projects/latam_challenge/src/q1/time.py\"], stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
+    "time.sleep(1)  # Esperar un segundo para que el proceso comience a ejecutarse\n",
+    "\n",
+    "# Obtener información sobre el uso de recursos del sistema\n",
+    "try:\n",
+    "    memoria = psutil.Process(process.pid).memory_info()\n",
+    "    # Imprimir la cantidad de memoria utilizada por el proceso\n",
+    "    print(f\"Memoria utilizada por mi_script.py: {memoria.rss/1024} Kilobytes\")\n",
+    "except psutil.NoSuchProcess:\n",
+    "    print(\"El proceso ya ha finalizado.\")\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
